--- a/scss/utilidades/_variables.scss
+++ b/scss/utilidades/_variables.scss
@@ -2,10 +2,11 @@
 $color-background: #343a40;
 $color-text: #fff;
 $color-accent: #BFD104;
+$color-planes: #808080;
+$color-descripcion-plan:whitesmoke;
 
 // Tamaños
 $navbar-brand-width: 150px;
 $border-radius: 8px;
 
-// Otros
-// ...
+
