--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,8 @@
-
+/* -------------------------------------
+   VARIABLES Y CONFIGURACIÓN GENERAL
+---------------------------------------- */
 @charset "UTF-8";
+
 // Importar variables
 @import "utilidades/variables";
 
@@ -9,130 +12,90 @@
 // Importar consultas de medios
 @import "utilidades/media-queries";
 
-// Estilos restantes
+//importar stylos de los html//
+@import "secciones/contacto";
+
+@import "secciones/index";
+
+@import "secciones/servicios";
+
+@import "secciones/planes";
+
+@import "secciones/trabaja";
 
 
 
+
+
+/* -------------------------------------
+   ESTILOS GENERALES
+---------------------------------------- */
 body {
   margin: 0;
   padding: 0;
+  font-family: "Arial", sans-serif; /* Fuente predeterminada */
 }
 
+/* -------------------------------------
+   MENÚ DE NAVEGACIÓN
+---------------------------------------- */
 .navbar-brand {
-  width: 150px; /* Ajusta el tamaño según lo necesites */
-  height: auto; /* Esto mantendrá la proporción original */
+  width: 150px;
+  height: auto;
+  
 }
 
 .nav {
-  border: 1px solid #fff; /* Ajusta el ancho y color del borde según tus preferencias */
-  background-color: #333; /* Ajusta el color de fondo*/
-  padding: 10px; /* Ajusta el espaciado interno*/
+  border: 1px solid #fff;
+  background-color: #333;
+  padding: 10px;
+  
+}
+.nav-item{
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
-.titulo-principal, .bordered-container, .image-grid {
-  margin-bottom: 20px;
-}
 
+
+
+/* -------------------------------------
+   TÍTULOS Y CONTENIDO PRINCIPAL
+---------------------------------------- */
 .titulo-principal {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   text-align: center;
   text-transform: uppercase;
   color: white;
   text-decoration: underline;
+  margin-bottom: 30px;
 }
 
 .titulo-secundario {
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  text-align: center; /* Asegura el centrado horizontal */
   text-transform: uppercase;
   color: white;
-  background-color: #333;
-  padding: 0;
-  border: 1px solid #555; /* Color del borde */
-  border-radius: 10px;
+  text-decoration:underline;
+  margin-bottom: 30px;
+  max-width: 80%; /* Ajusta el valor según tu diseño */
+  margin: 20px auto; /* Centra el contenedor horizontalmente y agrega un margen vertical */
 }
+.titulo-terciario {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  text-align: center; /* Asegura el centrado horizontal */
+  text-transform: uppercase;
+  color:black;
+ margin-bottom: 30px;
+}
+
 
 .descripcion-principal {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   text-align: center;
-  color: #BFD104;
-  font-size: 18px;
-}
-
-.footer {
-  background-color: black;
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #828282;
-  margin-top: 25%;
-  padding: 20px;
-}
-
-.image-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
-}
-
-.image-grid img {
-  width: 100%;
-  height: auto;
-  border-radius: 8px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-}
-
-body {
-  font-family: "Arial", sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-.trabaja {
-  margin-bottom: 20px;
-}
-
-.contact-box {
-  max-width: 400px;
-  margin: 50px auto;
-  padding: 20px;
-  background-image: url(../img/contacto.jpg); /*imagen de fondo */
-  background-size: cover; /* tamaño de la caja */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  color: #BFD104; /* Cambia el color del texto para que sea legible en la imagen de fondo */
-}
-
-.contact-box h2 {
-  text-align: center;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-label {
-  margin-bottom: 5px;
-}
-
-input, textarea {
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-}
-
-button {
-  padding: 10px;
-  background-color: #BFD104;
-  color: #fff;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: black;
+  color: #bfd104;
+  font-size: 22px;
+  margin-bottom: 40px;
 }
 
 .header {
@@ -148,6 +111,9 @@ button:hover {
   justify-content: space-around;
 }
 
+/* -------------------------------------
+   CONTENIDO PRINCIPAL
+---------------------------------------- */
 .main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -160,6 +126,18 @@ section {
   padding: 20px;
 }
 
+.image-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
+}
+
+.image-grid img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
 img {
   max-width: 100%;
   height: auto;
@@ -169,63 +147,47 @@ ol {
   padding: 0;
   margin: 0;
   list-style: none;
+  
 }
+
 
 li {
   margin-bottom: 10px;
 }
 
-.card-img {
-  max-width: 100%;
-  height: auto;
+/* -------------------------------------
+   EFECTOS DE ANIMACIÓN
+---------------------------------------- */
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: scale(0.25);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
-.card {
-  margin-bottom: 20px;
+img {
+  view-timeline-name: --image;
+  view-timeline-axis: block;
+
+  animation-timeline: --image;
+  animation-name: show;
+
+  animation-range: entry 25% cover 25%;
+  animation-fill-mode: both;
 }
-
-.plan-list {
-  list-style-type: disc;
-  padding-left: 20px;
+/* -------------------------------------
+   PIE DE PÁGINA
+---------------------------------------- */
+.footer {
+  background-color: black;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #828282;
+  margin-top: 25%;
+  padding: 20px;
 }
-
-.plan-list li {
-  color: white;
-}
-
-.servicios, .paramedicos, .medicos {
-  margin-top: 20px; /* Espacio entre secciones */
-}
-
-.ambulance, .paramedic, .medi {
-  width: 100%;
-  max-width: 400px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-}
-
-.contacto {
-  padding: 40px; /* Espaciado interno */
-  text-align: center; /* Centrar contenido */
-}
-
-.info-contacto {
-  margin-top: 20px; /* Espacio superior entre la descripción y la información de contacto */
-}
-
-.telefono, .email {
-  font-size: 18px; /* Tamaño de fuente */
-  margin: 10px 0; /* Espaciado superior e inferior */
-}
-
-.telefono a, .email a {
-  color: #007bff; /* Color del enlace */
-  text-decoration: none;
-}
-
-.telefono a:hover, .email a:hover {
-  text-decoration: underline;
-}
-
-
